src/app/product-store/slot-search/slot-search.component.scss
@import '/src/app/_ps-mixins.scss';

@include card-badges;
@include danger-action;
@include displaying-text-responsive;
@include table-inline-buttons;
@include table-responsive-columns;
@include dialog-footer-buttons;

:host ::ng-deep {
  .card-badge-left {
    &.badge-2 {
      top: 33px;
    }
  }
  /* special handling for zebra look on table rows */
  .p-datatable .p-datatable-tbody {
    tr:nth-child(even) td {
      background-color: var(--table-body-row-even-bg);
    }
    tr td:nth-child(1).bg-inherit {
      background-color: inherit !important;
    }
  }

  .p-datatable {
    .p-datatable-thead > tr:first-child > th:first-child,
    .p-datatable-thead > tr:first-child > th:last-child {
      background-color: rgba(var(--primary-color-rgb), 0.12);
    }
    .p-datatable-thead > tr:nth-child(2) > th {
      border-bottom-width: 2px;
    }
    .p-datatable-thead > tr > th,
    .p-datatable-tbody > tr > td {
      padding: 0.5rem;
    }
  }
  /* hide unusable stuff */
  ocx-column-group-selection,
  ocx-data-view-controls div div button {
    display: none;
  }
  ocx-data-view-controls div {
    justify-content: center !important;
  }

  .max-height-for-2-lines {
    max-height: 2.5rem;
  }
  .text-ellipsis-2-lines {
    @include displaying-text-ellipsis(2);
  }
  .bookmark-link:hover {
    background: var(--tabview-header-hover-bg);
    border-color: var(--tabview-header-hover-border-color);
    color: var(--text-secondary-color);
  }

  .min-w-20rem {
    min-width: 20rem;
  }
  .min-w-16rem {
    min-width: 16rem;
  }
}

